JumpScript/tests/baselines/reference/privateIndexer.errors.txt
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.jump(4,5): error TS1071: 'private' modifier cannot appear on an index signature.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.jump(8,5): error TS1071: 'private' modifier cannot appear on an index signature.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.jump(12,5): error TS1071: 'private' modifier cannot appear on an index signature.


==== tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.jump (3 errors) ====
    // private indexers not allowed
    
    class C {
        private [x: string]: string;
        ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }
    
    class D {
        private [x: number]: string;
        ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }
    
    class E<T> {
        private [x: string]: T;
        ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }